[project]
name = "url-cralwer"
version = "0.1.0"
description = ""
authors = [
    {name = "Dung Ngo",email = "dungngo4520@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
